k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gsx2json
  annotations:
    "nginx.ingress.kubernetes.io/proxy-body-size" : "0"
    "nginx.ingress.kubernetes.io/proxy-read-timeout" : "600"
    "nginx.ingress.kubernetes.io/proxy-send-timeout" : "600"
    "kubernetes.io/tls-acme" : "true"
    "cert-manager.io/cluster-issuer" : "cloudflare"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "${domain}"
      secretName: gsx2json-tls
  rules:
  - host: "${domain}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gsx2json
            port:
              number: 80
